# dlopen_sandbox

./: .gitignore  DynamicLibrary.cpp  DynamicLibrary.h  Makefile  driver.c  run_complete_test_reverse.py  runme.sh  runtime.cpp  runtime.h
animals/: Makefile
driver/: Makefile.am  configure.ac  driver.h  racecar_driver.cpp  racecar_driver.h  test_racecar_driver.cpp
py_one/: setup.py
py_one/src/: all.cpp
py_two/: setup.py
py_two/src/: all.cpp
runtime/: DynamicLibrary.cpp  DynamicLibrary.h  Makefile.am  configure.ac  racecar_runtime.cpp  racecar_runtime.h  test_racecar_runtime.cpp
runtime_disjoint/: Dockerfile  Dockerfile.both
runtime_disjoint/driver/: configure.ac
runtime_disjoint/py_two/src/: all.cpp
runtime_disjoint/runtime_one/: Makefile.am  racecar_runtime_one.cpp  racecar_runtime_one.h  test_racecar_runtime_one.cpp
runtime_disjoint/runtime_two/: Makefile.am  racecar_runtime_two.cpp
runtime_dlopened/: Dockerfile  run_complete_test.py
runtime_dlopened/driver/: Makefile.am  racecar_driver.cpp
runtime_dlopened/py_one/: setup.py
runtime_dlopened/py_one/src/: all.cpp
runtime_dlopened/py_two/: setup.py
runtime_dlopened/runtime_one/: configure.ac
runtime_dlopened/runtime_two/: DynamicLibrary.cpp  Makefile.am  racecar_runtime_two.h  test_racecar_runtime_two.cpp
runtime_one/: Makefile.am  racecar_runtime_one.cpp
runtime_two/: configure.ac  racecar_runtime_two.cpp
